--- a/types/LocaleString.html
+++ b/types/LocaleString.html
@@ -17,7 +17,7 @@
 <h1>Type alias LocaleString</h1></div>
 <div class="tsd-signature">Locale<wbr/>String<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">&quot;en&quot;</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/9dcb6b6/src/rdf/types.ts#L24">src/rdf/types.ts:24</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/229a3f1/src/rdf/types.ts#L24">src/rdf/types.ts:24</a></li></ul></aside></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -91,6 +91,7 @@
 <li class="tsd-kind-variable"><a href="../variables/rdf.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>rdf</a></li>
 <li class="tsd-kind-variable"><a href="../variables/rdfs.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>rdfs</a></li>
 <li class="tsd-kind-variable"><a href="../variables/schema.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>schema</a></li>
+<li class="tsd-kind-variable"><a href="../variables/seas.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>seas</a></li>
 <li class="tsd-kind-variable"><a href="../variables/sosa.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>sosa</a></li>
 <li class="tsd-kind-variable"><a href="../variables/ssn.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>ssn</a></li>
 <li class="tsd-kind-variable"><a href="../variables/ssns.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>ssns</a></li>
