--- a/types/LocaleString.html
+++ b/types/LocaleString.html
@@ -17,7 +17,7 @@
 <h1>Type alias LocaleString</h1></div>
 <div class="tsd-signature">Locale<wbr/>String<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">&quot;en&quot;</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/4f7f6a1/src/rdf/types.ts#L24">src/rdf/types.ts:24</a></li></ul></aside></div>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/6f304f6/src/rdf/types.ts#L24">src/rdf/types.ts:24</a></li></ul></aside></div>
 <div class="col-4 col-menu menu-sticky-wrap menu-highlight">
 <div class="tsd-navigation settings">
 <details class="tsd-index-accordion"><summary class="tsd-accordion-summary">
@@ -84,6 +84,7 @@
 <li class="tsd-kind-variable"><a href="../variables/foaf.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>foaf</a></li>
 <li class="tsd-kind-variable"><a href="../variables/geo.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>geo</a></li>
 <li class="tsd-kind-variable"><a href="../variables/hardware.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>hardware</a></li>
+<li class="tsd-kind-variable"><a href="../variables/m3lite.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>m3lite</a></li>
 <li class="tsd-kind-variable"><a href="../variables/ogc.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>ogc</a></li>
 <li class="tsd-kind-variable"><a href="../variables/owl.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>owl</a></li>
 <li class="tsd-kind-variable"><a href="../variables/poso.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-32-path"></use><use href="#icon-32-text"></use></svg>poso</a></li>
