--- a/classes/Geometry.html
+++ b/classes/Geometry.html
@@ -20,10 +20,10 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">Geometry</span>
 <ul class="tsd-hierarchy">
-<li><a href="PointGeometry.html" class="tsd-signature-type tsd-kind-class">PointGeometry</a></li>
-<li><a href="PolygonGeometry.html" class="tsd-signature-type tsd-kind-class">PolygonGeometry</a></li></ul></li></ul></section><aside class="tsd-sources">
+<li><a href="PolygonGeometry.html" class="tsd-signature-type tsd-kind-class">PolygonGeometry</a></li>
+<li><a href="PointGeometry.html" class="tsd-signature-type tsd-kind-class">PointGeometry</a></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/479645a/src/models/Geometry.ts#L10">src/models/Geometry.ts:10</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/e7ff58c/src/models/Geometry.ts#L32">src/models/Geometry.ts:32</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -51,7 +51,7 @@
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>spatial<wbr/>Accuracy</span><a href="#spatialAccuracy" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">spatial<wbr/>Accuracy</span><span class="tsd-signature-symbol">?:</span> <a href="QuantityValue.html" class="tsd-signature-type tsd-kind-class">QuantityValue</a></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/479645a/src/models/Geometry.ts#L16">src/models/Geometry.ts:16</a></li></ul></aside></section></section></div>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/e7ff58c/src/models/Geometry.ts#L38">src/models/Geometry.ts:38</a></li></ul></aside></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
