--- a/variables/DefaultEngine.html
+++ b/variables/DefaultEngine.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html class="default" lang="en"><head><meta charSet="utf-8"/><meta http-equiv="x-ua-compatible" content="IE=edge"/><title>geo | @openhps/rdf</title><meta name="description" content="Documentation for @openhps/rdf"/><meta name="viewport" content="width=device-width, initial-scale=1"/><link rel="stylesheet" href="../assets/style.css"/><link rel="stylesheet" href="../assets/highlight.css"/><script defer src="../assets/main.js"></script><script async src="../assets/search.js" id="tsd-search-script"></script><script async src="../assets/navigation.js" id="tsd-nav-script"></script></head><body><script>document.documentElement.dataset.theme = localStorage.getItem("tsd-theme") || "os"</script><header class="tsd-page-toolbar">
+<!DOCTYPE html><html class="default" lang="en"><head><meta charSet="utf-8"/><meta http-equiv="x-ua-compatible" content="IE=edge"/><title>DefaultEngine | @openhps/rdf</title><meta name="description" content="Documentation for @openhps/rdf"/><meta name="viewport" content="width=device-width, initial-scale=1"/><link rel="stylesheet" href="../assets/style.css"/><link rel="stylesheet" href="../assets/highlight.css"/><script defer src="../assets/main.js"></script><script async src="../assets/search.js" id="tsd-search-script"></script><script async src="../assets/navigation.js" id="tsd-nav-script"></script></head><body><script>document.documentElement.dataset.theme = localStorage.getItem("tsd-theme") || "os"</script><header class="tsd-page-toolbar">
 <div class="tsd-toolbar-contents container">
 <div class="table-cell" id="tsd-search" data-base="..">
 <div class="field"><label for="tsd-search-field" class="tsd-widget tsd-toolbar-icon search no-caption"><svg width="16" height="16" viewBox="0 0 16 16" fill="none"><use href="#icon-search"></use></svg></label><input type="text" id="tsd-search-field" aria-label="Search"/></div>
@@ -13,11 +13,11 @@
 <div class="tsd-page-title">
 <ul class="tsd-breadcrumb">
 <li><a href="../modules.html">@openhps/rdf</a></li>
-<li><a href="geo.html">geo</a></li></ul>
-<h1>Variable geo<code class="tsd-tag ts-flagConst">Const</code> </h1></div>
-<div class="tsd-signature"><span class="tsd-kind-variable">geo</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type ">__module</span><span class="tsd-signature-symbol"> = geoImport</span></div><aside class="tsd-sources">
+<li><a href="DefaultEngine.html">DefaultEngine</a></li></ul>
+<h1>Variable DefaultEngine<code class="tsd-tag ts-flagConst">Const</code> </h1></div>
+<div class="tsd-signature"><span class="tsd-kind-variable">Default<wbr/>Engine</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span><span class="tsd-signature-symbol"> = ...</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in src/vocab/index.ts:1</li></ul></aside></div>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rdf/blob/81d860d/src/index.ts#L3">src/index.ts:3</a></li></ul></aside></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
